# dtts

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile.toml  docker-compose.dev.yml  docker-compose.prod.yml
api/: .gitignore  Cargo.toml  Dockerfile.dev  Dockerfile.prod  prod.sh
api/migrations/: 20230208142425_guild.down.sql  20230208142425_guild.up.sql  20230208142558_dictionary.down.sql  20230208142558_dictionary.up.sql  20230212081654_server_perm.down.sql  20230212081654_server_perm.up.sql  20230215073601_payment.down.sql  20230215073601_payment.up.sql
api/scripts/: install_devtools.sh  install_requirements.sh
api/src/: client.rs  config.rs  error.rs  lib.rs  logs.rs  macros.rs  oauth2client.rs  prelude.rs  user.rs
api/src/middleware/: influx.rs
api/src/models/: dict.rs  mod.rs  payment.rs  server_perm.rs
api/src/routes/: mod.rs
api/src/routes/donate/: checkout.rs  mod.rs  plans.rs  register.rs
api/src/routes/oauth2/: login.rs  logout.rs  mod.rs  redirect.rs
api/src/routes/servers/: dict.rs  index.rs  list.rs  mod.rs  perms.rs
api/src/routes/users/: billing_portal.rs  me.rs  mod.rs  payment.rs
bot/: Cargo.toml  Dockerfile.dev  Dockerfile.prod
bot/src/: check.rs  data.rs  error.rs  handler.rs  logs.rs  main.rs  prelude.rs
bot/src/commands/: dict.rs  mod.rs
bot/src/models/: guild.rs  mod.rs
bot/src/tasks/: mod.rs
config/: grafana.ini  telegraf.conf
web/: .eslintrc.yml  .prettierrc.yml  Dockerfile.dev  Dockerfile.prod  app.vue  config.ts  nuxt.config.ts  package.json  prod.sh
web/assets/styles/: main.scss
web/components/: HelloWorld.vue  Paragraph.vue
web/components/account/: Header.vue  Panels.vue  Payment.vue
web/composables/: useAppTheme.ts  useConfirm.ts  useDialog.ts  useNavDrawer.ts  usePersistedState.ts  useSnackbar.ts  useUser.ts  useValidate.ts
web/layouts/: default.vue
web/middleware/: auth.ts
web/models/: discord.ts
web/pages/: account.vue  index.vue  login.vue  logout.vue
web/plugins/: vuetify.ts
web/src/: palette.ts  theme.ts  utils.ts
web/types/: discord.ts  index.ts
(+32 files in other folders)
