[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.7.2", features = ["redis-actor-session"] }
actix-web = "4.3.0"
anyhow = "1.0.68"
async-stripe = { version = "0.15.1", features = ["runtime-tokio-hyper"] }
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.26"
futures-util = "0.3.26"
influxdb = { version = "0.5.2", features = ["derive"] }
log = "0.4.17"
oauth2 = "4.3.0"
poise = "0.5.2"
pretty_env_logger = "0.4.0"
redis = { version = "0.22.3", features = ["tokio-comp"] }
reqwest = { version = "0.11.14", features = ["gzip", "json"] }
sentry = "0.29.2"
sentry-actix = "0.29.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["macros", "postgres", "runtime-actix-rustls", "chrono"] }
sqlx-macros = { git = "https://github.com/Shirataki2/sqlx-macro", version = "0.1.3" }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["sync"] }
url = "2.3.1"
