[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
dotenv = "0.15.0"
influxdb = { version = "0.5.2", features = ["derive"] }
log = "0.4.17"
maplit = "1.0.2"
poise = "0.5.2"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.14", features = ["json"] }
sentry = "0.29.2"
sentry-log = "0.29.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
songbird = { version = "0.3.0", features = ["serenity"] }
sqlx = { version = "0.6.2", features = ["macros", "postgres", "runtime-actix-rustls", "chrono"] }
sqlx-macros = { git = "https://github.com/Shirataki2/sqlx-macro", version = "0.1.3" }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["rt", "macros"] }
